tests/NormalTests/paczka1/small_fuzzy/31539441.err
Error in line 4: A830 A480 28,7
Error in line 1: VvQC A830 9,5
Error in line 16: 09L A830 84,09
